fix form group spacing

--- a/src/bootstrap-gisp/less/bootstrap-gisp/_forms.less
+++ b/src/bootstrap-gisp/less/bootstrap-gisp/_forms.less
@@ -41,10 +41,6 @@ textarea {
     resize: none;
 }
 
-.form-group {
-    margin-bottom: 8px;
-}
-
 .form-group-heading {
     border-bottom: 1px solid #eee;
     margin-top: 27px;
@@ -66,7 +62,6 @@ form:not(.form-horizontal) {
     label.required::after {
         position: relative;
         content: "*";
-        // color: @state-danger-text;
         left: 4px;
         font-size: @font-size-base - 1;
     }
@@ -78,7 +73,6 @@ form:not(.form-horizontal) {
         label.required::before {
             position: relative;
             content: "*";
-            // color: @state-danger-text;
             left: -4px;
             font-size: @font-size-base - 1;
         }
@@ -87,7 +81,6 @@ form:not(.form-horizontal) {
         label.required::after {
             position: relative;
             content: "*";
-            // color: @state-danger-text;
             left: 4px;
             font-size: @font-size-base - 1;
         }
